fix weather icon distortion

--- a/public/stylesheets/sunrunr.css
+++ b/public/stylesheets/sunrunr.css
@@ -100,6 +100,7 @@ nav {
 
 .weather-icon {
   max-height: 30px;
+  align-self: center;
 }
 
 .scrolling-wrapper {
